Kubernetes/AWX/awx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awx
  namespace: awx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awx
  template:
    metadata:
      labels:
        app: awx
    spec:
      containers:
      - name: awx
        image: quay.io/ansible/awx:23.5.0
        ports:
        - containerPort: 8052
