Kubernetes/AWX/awx-postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awx-postgres
  namespace: awx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awx-postgres
  template:
    metadata:
      labels:
        app: awx-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: awx-postgres-pvc
