Kubernetes/AWX/awx-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: awx-postgres
  namespace: awx
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: awx-postgres
