Kubernetes/AWX/awx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: awx
  namespace: awx
spec:
  ports:
    - port: 80
      targetPort: 8052
  selector:
    app: awx
