Kubernetes/AWX/awx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - awx.boltonhomelab.com
    secretName: awx-tls
  rules:
  - host: awx.boltonhomelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: awx-service
            port:
              number: 80
